か　ふるさと絵本館

--- a/page_ka.html
+++ b/page_ka.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>かこさとしふるさと絵本館</title>
+  <title>越前かるた-かこさとしふるさと絵本館</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/ka.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +61,116 @@
        <h2>か　：　かこさとしふるさと絵本館　楽しいキャラがいっぱいだ</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>かこさとしの魅力が詰まった場所</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/ふるさと絵本館.png">
+     </div>
+
+     <div class="page-setumei">
+      <p>
+        2013年4月26日に開館しました。<br>
+        かこさとしのほとんどの作品がそろっており、その場で絵本を読めたり、キャラクターと写真をとったり、外の広場では遊具であそぶことができます。<br>
+        全国から訪れる人がいるそうです。
+      </p>
+     </div>
+
+
+     <div class="balloon2-right">
+      <p>かこさとしって？</p>
     </div>
+    <div class="hitokoto">
+     <p>越前市生まれの絵本作家</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/かこさとし.png">
+    </div>
+
+    <div class="page-setumei">
+     <p>
+      加古里子（かこ さとし）<br>
+      1926年現在の福井県越前市に生まれました。<br>
+      児童文化の研究者でもあり、現在は出版を中心に幅広く活躍しています。<br>
+      <br>
+      代表作<br>
+      ・『からすのパンやさん』<br>
+      　(「かこさとしおはなしのほん」シリーズ)<br>
+      ・『うつくしい絵』<br>
+      ・「だるまちゃん」シリーズ<br>
+      ・『とこちゃんはどこ』<br>
+      ・「かこさとしからだの本」シリーズ<br>
+      ・『伝承遊び考』<br>
+     </p>
+    </div>
+    <div class="official-site">
+      <a href="https://kakosatoshi.jp/" class="btn btn--red btn--radius btn--cubic">かこさとし　公式サイトはこちら<i class="fas fa-angle-right fa-position-right"></i></a>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>どんな部屋があるの？</p>
+    </div>
+    <div class="hitokoto">
+     <p>かこさとしの世界に入れる3つの部屋</p>
+    </div>
+   
+    <div class="page-setumei">
+     <p>
+      ★えほんのへや<br>
+      約5,000冊の絵本や大型絵本、紙芝居、雑誌がそろっています。<br>
+      赤ちゃんを抱っこしながら絵本が読めるコーナーや授乳室も設けています。<br>
+      <br>
+      ★あそびのへや<br>
+      自由に絵本を読んだり、『からすのパンやさん』や『だるまちゃん』などの衣装を来てキャラクターと一緒に写真を撮ったりすることができます。<br>
+      おはなし会や工作教室、音楽会なども開催しています。<br>
+      <br>
+      ★もとのえをみるへや(2階)<br>
+      かこさとしの作品の「もとのえ」(原画、複製画)や、かこさとしと越前市との資料の展示がされています。
+     </p>
+    </div>
+
+
+
+    <div class="balloon2-right">
+      <p>お問い合わせ</p>
+    </div>
+    <div class="hitokoto">
+     <p>0778-21-2019</p>
+    </div>
+   
+    <div class="page-setumei">
+     <p>
+      住所　　　≫　越前市高瀬一丁目14-7<br>
+      営業時間　≫　10：00～18：00<br>
+      定休日　　≫　火曜日・祝日の翌日・年末年始<br>
+      電話　　　≫　0778-21-2019<br>
+      入館料　　≫　無料(本の貸し出しはできません)<br><br>
+      ※新型コロナウイルスの影響で変更がある場合があります。
+     </p>
+    </div>
+
+    </div>
+
+     <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>絵本で何度も読みました。特に『だるまちゃんとてんぐちゃん』！日常の一コマという感じなのに、ユーモアたっぷりで癒されるイラストで大好きです。今回越前かるたを作る一環で久しぶりに読ませていただきました。越前中央図書館にたくさん置いてありますので、ぜひ読んでください。</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
 
     <div class="access">
       <h1>アクセス</h1>
