な　馬借街道

--- a/page_na.html
+++ b/page_na.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>府中馬借街道</title>
+  <title>越前かるた-府中馬借街道</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/na.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +61,83 @@
        <h2>な　：　南越の　港へこの道　府中馬借街道</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>武生と南越前町の港を結ぶ道</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/府中馬借街道.png">
+     </div>
+
+     <div class="page-setumei">
+      <p>
+        府中馬借街道(ふちゅうばしゃくかいどう)とは、中世の頃から江戸時代にかけて、馬で荷物を運ぶ時に使われていた古い道です。<br>
+        <br>
+        ▼府中馬借街道　案内図
+      </p>
+     </div>
+     <div class="shasin">
+      <img src="pageimages/府中馬借街道案内図.png">
     </div>
+
+
+    
+    <div class="balloon2-right">
+      <p>どうしてできたの？</p>
+    </div>
+    <div class="hitokoto">
+     <p>都へ行くために、港へ行く道が必要だった</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+      武生から都までは険(けわ)しい山をたくさん越えなければなりませんでしたが、武生から西に、低い山を越えて南越前町に出れば、そこから船で簡単に敦賀に行くことができました。<br>
+      <br>
+      中・近世になると船による荷運びが盛んになり、武生と南越前町の港を結ぶこの道が重要な街道になってきました。<br>
+      <br>
+      現在ではこの道で「府中馬借街道トレイルラン」というマラソン大会が行われています。
+     </p>
+    </div>
+   
+
+    <div class="balloon2-right">
+      <p>名前の由来(ゆらい)は？</p>
+    </div>
+    <div class="hitokoto">
+     <p>荷運びについていく人を「馬借」というから</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+      「府中(ふちゅう)」とは昔の越前市をそう呼びます。<br>
+      <br>
+      「馬借(ばしゃく)」とは荷物運びをする馬について行く人のことです。今でいう運送業者ですね。<br>
+      <br>
+      そのような人たちが活躍した「街道」なので「府中馬借街道」といいます。
+     </p>
+    </div>
+   
+
+
+    </div>
+
+     <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>昔の人の地理感覚は本当にすごいですね！山道なので、11月ごろに行くと紅葉がきれいなのではないかなと思います。春にはウォーキングイベントも開催されているそうなのでぜひ行ってみて下さい！</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
 
     <div class="access">
       <h1>アクセス</h1>
