--- a/page_mi.html
+++ b/page_mi.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>日野山</title>
+  <title>越前かるた-日野山</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/mi.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -56,6 +60,109 @@
      <div class="yomihuda">
        <h2>み　：　緑いっぱい　越前富士　日野山</h2>
      </div>
+
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>まるで富士山のような山の形が特徴。越前市を象徴する山</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/日野山.png">
+     </div>
+
+     <div class="page-setumei">
+      <p>
+        越前市、南越前町にまたがる山です。<br>
+        日野神社の御神体(ごしんたい)で、頂上に祠(ほこら)があります。<br>
+        福井県のちょうど真ん中にあり、武生の学校には校歌によく登場しています。
+      </p>
+     </div>
+
+
+     <div class="balloon2-right">
+      <p>高さはどのくらい？</p>
+    </div>
+    <div class="hitokoto">
+     <p>標高795ｍ</p>
+    </div>
+    
+    <div class="page-setumei">
+     <p>日野山の高さは約795ｍです。<br>
+       高さはだいぶ違いますが、山の形が富士山に似ていることから「越前富士」と呼ばれることがあります。(日永山と呼ばれることもある)
+     </p>
+    </div>
+
+
+     <div class="balloon2-right">
+      <p>どこから登るの？</p>
+    </div>
+    <div class="hitokoto">
+     <p>平吹町の日野神社などから3つほど</p>
+    </div>
+    
+    <div class="page-setumei">
+     <p>
+      ・越前市中平吹町の日野神社から約1時間30分<br>
+      ・越前市萱谷町や宮谷町から約1時間50分<br>
+      ・越前市荒谷町の日野神社から約1時間30分<br>
+      <br>
+      南越前町牧谷または越前市萱谷町から旧朝倉街道を経由するルートがあります。<br>
+      ただし萱谷町から牧谷峠までの旧街道は一部荒廃がすすんでおり、特に沢の増水時は注意が必要です。</p>
+    </div>
+
+
+     <div class="balloon2-right">
+      <p>昔の人に人気？</p>
+    </div>
+    <div class="hitokoto">
+     <p>たくさんの歌人が詠んでいる！</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+       日野山のことを詠んだ歌がいくつかあります。<br><br>
+
+       ★こヽにかく　日野の杉むら　埋む雪<br>
+       　　　　　　　　小塩の松に　けふやまかえる/ 紫式部<br><br>
+       (越前国府では、日野岳に群立する杉をこんなに埋める雪が降っている。都でも今日は小塩岳の松に雪が降っているのだろうか。そんな景色が思い出される。)<br>
+       <br><br>
+       ★あすの月　雨占わん　ひなが岳/松尾芭蕉(奥の細道) <br><br>
+       (明日の晩は雨になるのか、月は見えるのか。ひなが岳の晴れ具合で予想してみよう)<br>
+       <br><br>
+       ★雲はれて　仰ぐも高き　日永獄<br>
+       　　　　　　　　みどり匂へる　春日陰かな<br>
+      　　/松平春嶽(しゅんがく　越前藩の藩主)
+
+     </p>
+    </div>
+
+
+
+    </div>
+
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>直接登ったことはないですが、母校の校歌に登場していたなという印象です。たくさんの歌人がこの日野山のことを書いていたと知って驚きました！それだけ昔からたくさんの人に愛された山ということですね。</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
+
+    <div class="access">
+      <h1>アクセス</h1>
+
+      <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25868.684415706706!2d136.2076998!3d35.859164799999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff8ab0033a28015%3A0x4ffdf2451d6b9ee!2z5pel6YeO5bGx!5e0!3m2!1sja!2sjp!4v1605013774668!5m2!1sja!2sjp"  width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
 
     </div>
 
