あ　しらやま西瓜

--- a/page_a.html
+++ b/page_a.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>しらやま西瓜</title>
+  <title>越前かるた-しらやま西瓜</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/a.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +61,111 @@
        <h2>あ　：　甘くて　大きい　しらやま西瓜</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>白山地区で栽培されているブランドスイカ</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/しらやま西瓜.png">
+     </div>
+     <div class="page-setumei">
+      <p>
+        しらやま西瓜(すいか)とは、越前市白山地区で1975年から栽培(さいばい)されているブランドすいかです。<br>
+        大きくて甘いしらやま西瓜は、全国でもトップクラスのすいかです！
+      </p>
+     </div>
+
+
+     <div class="balloon2-right">
+      <p>どのくらい大きいの？</p>
     </div>
+    <div class="hitokoto">
+     <p>直径が約15㎝！</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+       畑で作物を栽培するときに、細長くまっすぐ土を盛り上げる畝(うね)という部分がありますが、しらやま西瓜はその幅が約6ｍ！<br>
+       その中でも収穫するのは2~3個なので、しらやま西瓜の大きさが分かりますね！
+     </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>どのくらい甘いの？</p>
+    </div>
+    <div class="hitokoto">
+     <p>りんごやモモくらい甘い！</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+      普通のスイカの糖度(とうど・甘さを数字にしたもの)が11度なのに対して、しらやま西瓜の糖度はなんと12～15度！<br>
+      りんごやモモと同じくらいです。<br>
+      シャリシャリした食感も甘さを引き立たせています。
+     </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>おいしさの理由は？</p>
+    </div>
+    <div class="hitokoto">
+     <p>気候(きこう)と土と生産者の努力！</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+      昼と夜の寒暖差(かんだんさ・暑さと寒さの差)が激しい気候と、水持ち肥料持ちがいい粘土質の赤い土がおいしいスイカづくりのポイントです。<br>
+      <br>
+      また受粉のタイミングが味を左右するので、一番いい時期を見極めて数万匹のミツバチによる受粉をします。生産者のすいかと向き合う努力もおいしさの理由です！
+     </p>
+    </div>
+
+
+
+    <div class="balloon2-right">
+      <p>食べるには？</p>
+    </div>
+    <div class="hitokoto">
+     <p>7・8月にJA越前たけふをチェック！</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+      買う時期　≫　7月下旬～8月中旬<br>
+      買う値段　≫　5,000円～10,000円(目安)<br>
+      買う場所　≫　■コープたけふ　みどり館<br>
+      　　　　　　　　越前市塚町10-17-1<br>
+      　　　　　　　　TEL／0778-24-1717<br><br>
+      　　　　　　　■しらやま西瓜選果場<br>
+      　　　　　　　　福井県越前市都辺町<br>
+      　　　　　　　　TEL／0778-22-2222<br>
+      　　　　　　　　(JA越前たけふ　営農販売課)<br><br>
+      　　　　　　　■JA越前たけふ　ホームページ<br>
+     </p>
+    </div>
+
+    <div class="official-site">
+      <a href="http://shop.ja-echizentakefu.or.jp/tokusanhin/" class="btn btn--red btn--radius btn--cubic">JA越前たけふ　ホームページはこちら<i class="fas fa-angle-right fa-position-right"></i></a>
+    </div>
+
+    </div>
+
+     <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>夏の楽しみの一つがこのしらやま西瓜です！私は西瓜は苦手な方なのですが、しらやま西瓜はとっても甘いのでついついつまんでしまいます。知り合いに聞いたのですが、西瓜は切って売ってあるものより一つまるまる買った方が美味しいんだとか。ぜひ一玉買って、大きさも体験してみて下さい！</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
 
     <hr>
 
