さ　万葉祭り

--- a/page_sa.html
+++ b/page_sa.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>万葉祭り</title>
+  <title>越前かるた-万葉祭り</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/sa.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +61,92 @@
        <h2>さ　：　五月晴れ　万葉祭りの　恋の唄</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>万葉行列、大茶会が楽しめる味真野の春祭り</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/味真野万葉お茶会.png">
+     </div>
+
+     <div class="page-setumei">
+      <p>
+        味真野地区で、毎年ゴールデンウィークの5月3・4日に開かれるお祭りです。<br>
+        万葉行列や茶道各流派がお点前を披露する万葉大茶会、バンド演奏、和太鼓、ミニコンサート、万葉相聞歌朗唱などが行われます。</p>
     </div>
+
+
+    <div class="balloon2-right">
+      <p>お祭りのメインは？</p>
+    </div>
+    <div class="hitokoto">
+     <p>万葉行列</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/味真野万葉祭り.png">
+    </div>
+    
+    <div class="page-setumei">
+     <p>
+       味真野苑は万葉集(奈良時代の和歌集)ゆかりの地。<br>
+       万葉行列とは万葉時代の衣装を来た人や、万葉集に登場する人達の役の人が町中を練り歩くパレードです！</p>
+   </div>
+
+
+    <div class="balloon2-right">
+      <p>どこでやってるの？</p>
+    </div>
+    <div class="hitokoto">
+     <p>万葉の里　味真野苑(周辺)</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+       味真野万葉まつりは味真野苑とその周辺で行われます。来場者数は1万人！祭りの時期にはたくさんののぼり旗があがりますよ。<br>
+     </p>
+    </div>
+
+
+
+   <div class="balloon2-right">
+    <p>恋のパワースポットがある？</p>
+  </div>
+  <div class="hitokoto">
+   <p>継体天皇、照日の前の銅像前</p>
+  </div>
+  <div class="shasin">
+    <img src="pageimages/継体天皇.jpg">
+  </div>
+  <div class="page-setumei">
+   <p>
+     味真野苑の西側に「継体天皇(けいたいてんのう)と照日の前(てるひのまえ)の像」があります。その2人が見つめる先に恋のパワースポットと呼ばれるエリアがあります。<br>
+     <br>
+     ▼ハート型のエリア♡
+   </p>
+  </div>
+  <div class="shasin">
+   <img src="pageimages/恋のパワースポット.jpg">
+ </div>
+
+    </div>
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>毎年あじまの万葉祭りが来ると「今年も来たなあ」って思います！私は家が茶道をしていたので、お茶会の手伝いで何度か参加しました。万葉行列も見たことがありますが本当に大勢の人が練り歩くので見ているだけで楽しいです！</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
 
     <hr>
 
