--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   content="越前かるた,越前市,越前,かるた,でっかいかるた">
   <mete name="description"
   content="福井県越前市のオリジナルかるた「越前かるた(Echizen-karuta)」の一覧やこれまでのイベントを紹介しています。ダウンロードはサイト内のページをご活用ください。">
-  <link rel="icon" type="images/png" href="images/アイコン.jpg">
+  <link rel="icon" type="images/png" href="images/icon.jpg">
   <title>越前かるた</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
