--- a/page_he.html
+++ b/page_he.html
@@ -6,11 +6,15 @@
   <title>紫式部像</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/nav.css">]
+  <link rel="stylesheet" href="css/he.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +61,79 @@
        <h2>へ　：　平安時代の文学者　金色の紫式部像</h2>
      </div>
 
+
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>式部公園にある紫式部の像</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/紫式部像.png">
+     </div>
+     <div class="page-setumei">
+      <p>
+        武生中央公園近くの「紫式部(むらさきしきぶ)公園」の中で金色にかがやく像。<br>平安時代の文学者・紫式部の像があります。
+      </p>
+     </div>
+
+
+     <div class="balloon2-right">
+      <p>紫式部とは？</p>
     </div>
+    <div class="hitokoto">
+     <p>平安時代の大ヒットセラー『源氏物語』の作者！</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/紫式部.png">
+    </div>
+    <div class="page-setumei">
+     <p>
+      紫式部といえば、『源氏物語(げんじものがたり)』の作者として有名です。<br>
+      そんな紫式部が人生で一度だけ京都を離れて暮らしたのが、今の越前市にあたる武生の国府で、父・藤原為時(ふじわらのためとき)とともにこの地に移り住み、青春時代の約1年半をすごしました。
+     </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>どんな公園？</p>
+    </div>
+    <div class="hitokoto">
+     <p>平安時代の庭を再現した公園</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/式部公園.png">
+    </div>
+    <div class="page-setumei">
+     <p>
+      紫式部や平安時代の国司が過ごした屋敷と、紫式部日記・絵巻に描かれているような風雅な舟遊びができる庭園を、森蘊(もりおさむ)さんを含めた造園史家が研究を重ねたうえで再現(さいげん)したものです。<br>
+      <br>
+      四季折々違った姿を見ることができる公園で、観光客は少ないですが、その分落ち着いた雰囲気(ふんいき)で楽しむことができます。<br>
+      <br>
+      越前市東千福町20-369
+     </p>
+    </div>
+
+
+    </div>
+
+      <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>観光客は少ないですが、その分落ち着いて観光ができる公園です。よく武生中央公園と同じものだと思われることが多いですが、近くにあるだけで別の公園です。紫式部の像は想像よりも色がきれいに出ていて、晴れている時に見るのがおすすめですよ。</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
 
   </div><div class="access">
     <h1>アクセス</h1>
