--- a/page_ho.html
+++ b/page_ho.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>かるた王国</title>
+  <title>越前かるた-かるた王国</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/ho.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,14 +61,121 @@
        <h2>ほ　：　本気の勝負を見せつける！　かるた王国　越前市</h2>
      </div>
 
+
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>「かるた王国越前市」と呼ばれているほど、越前市民は百人一首が大好き！</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/百人一首.jpg.crdownload">
+     </div>
+     <div class="page-setumei">
+      <p>
+        越前市は競技かるたにおいて名人を生み出したり、各大会で入賞したり、子供の頃から百人一首(ひゃくにんいっしゅ)にふれる機会が多いことから「かるた王国」といわれています。
+      </p>
+     </div>
+
+
+     <div class="balloon2-right">
+      <p>ルールは？</p>
+    </div>
+    <div class="hitokoto">
+     <p>読まれた札を相手より早く取る！</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/かるた速さ.jpg">
+    </div>
+    <div class="page-setumei">
+     <p>
+      ★競技かるたのルール<br><br>
+      1.百人一首の100枚の札を裏向けにしてよく混ぜます。<br><br>
+      2.互いに25枚ずつ取り、自分の陣地に3段に分けて並べます。<br><br>
+      3.残りの50枚は箱に入れて使用しませんが、読み手は100枚の札を読むので、使わない札は空札となります。<br><br>
+      4.自陣の札を取ったら1枚減り、敵陣の札を取ったら相手に札を1枚送って自陣の札を1枚減らすことができます。<br><br>
+      5.自陣の札を早くなくした方が勝ちとなります。 
+     </p>
     </div>
 
-  </div><div class="access">
-    <h1>アクセス</h1>
 
-    <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23713.02374953875!2d136.25054260940965!3d35.88810509753079!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x947157339daf6f76!2z55m95bGx56We56S-!5e0!3m2!1sja!2sjp!4v1599640284133!5m2!1sja!2sjp" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+    <div class="balloon2-right">
+      <p>強さの秘密は？</p>
+    </div>
+    <div class="hitokoto">
+     <p>子どもの頃からかるたに触れるからと、雪国だから</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+      市内では子供の頃からかるたに触れる機会があり、競技かるたを本格的に学ぶことができる教室も各地区で行われています。<br>
+      <br>
+      また福井県が雪国であることも理由の1つではないかと言われています。雪の多い福井県では冬は外に出ることができないため、正月遊びとしてかるたが他の地域より親しまれてきたのではないかと考えられています。
+     </p>
+    </div>
 
-  </div>
+
+    <div class="balloon2-right">
+      <p>取り組みは？</p>
+    </div>
+    <div class="hitokoto">
+     <p>大会の開催やかるた教室</p>
+    </div>
+    <div class="shasin">
+      <p>★越前市子ども会育成連絡協議会の取り組み</p>
+      <img src="pageimages/かるた協議会.png">
+    </div>
+    <div class="page-setumei">
+     <p>
+      越前市子ども会育成連絡協議会では、毎年2月上旬に「越前市子ども会かるた大会」を開催しています。この大会は、競技かるたではなく5人一組のチームで戦う「源平合戦(げんぺいがっせん)」と呼ばれるかんたんなルールで行われます。大会前には、各地区の子ども会で練習が行われ、初めてかるたに触れる子どもも上の句と下の句を覚え、大会に挑戦します。</p>
+    </div>
+    <br>
+    <div class="shasin">
+      <p>★越前市かるた協会の取り組み</p>
+      <img src="pageimages/かるた協会.png">
+    </div>
+    <div class="page-setumei">
+     <p>
+      越前市かるた協会では、公民館を中心に行われているかるた教室に講師を呼び、地域の子どもたちに教えています。現在、約200人が競技かるたを学んでいます。また、毎年1月下旬に「越前市少年少女かるた選手権大会」を開催し、毎年、熱い戦いが繰り広げられます。</p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>かるたを始めたい！</p>
+    </div>
+    <div class="hitokoto">
+     <p>越前市かるた協会や公民館に！</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+      各地区の公民館でかるた教室をしています。<br>
+      競技かるたに興味のある方は越前市かるた協会まで！<br><br>
+      問い合せ先　≫　越前市かるた協会事務局(山本) <br>
+     　　　　　　　 【電話】0778-22-0172
+      
+     </p>
+    </div>
+
+
+    </div>
+
+
+     <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>越前かるたを作ろうと思ったきっかけの一つが、この「かるた王国越前市」です！少し前に『ちはやふる』ブームもありましたね。かるた好きは越前市民の皆さんに、この「越前かるた」も好きになってもらえたら嬉しいです。</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
 
     <hr>
 
