--- a/page_nu.html
+++ b/page_nu.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>いわさきちひろの生まれた家</title>
+  <title>越前かるた-いわさきちひろの生まれた家</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/nu.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,12 +61,115 @@
        <h2>ぬ　：　ぬくもりのイラスト　いわさきちひろの生まれた家</h2>
      </div>
 
+
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>日本を代表する絵本作家の生まれた家</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/ちひろの生まれた家.png">
+     </div>
+     <div class="page-setumei">
+      <p>
+        武生のまちなかに路地に面して静かにたたずむ古い町家「ちひろの生まれた家」は、日本を代表する絵本画家いわさきちひろが生をうけた場所です。<br>
+        <br>
+        ちひろの母・岩崎文江は、武生の実科高等女学校に教師として単身赴任(たんしんふにん)していましたが、お産のためにこの家の離れを借りました。1918年12月15日の雪の朝生まれました。<br>
+        <br>
+        現在は記念館となっています。</p>
+     </div>
+
+
+     <div class="balloon2-right">
+      <p>いわさきちひろとは？</p>
+    </div>
+    <div class="hitokoto">
+     <p>水彩で描かれた子供の絵が特徴的</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+       いわさきちひろとは、日本の画家であり絵本作家です。<br>
+       青春時代を戦争で過ごしたため、「子どもの幸せと平和」をテーマとして活動していました。<br>
+       <br>
+       代表作：<br>
+       1950年　紙芝居『お母さんの話』 (文部大臣賞受賞)<br>
+       1973年　絵本『ことりのくるひ』(ボローニャ国際児童図書展グラフィック賞受賞)
+      </p>
+    </div>
+    <div class="shasin">
+      <p>▼いわさきちひろ　赤い毛糸帽の女の子　1972年</p>
+      <img src="pageimages/赤い毛糸帽の女の子.png">
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>なにが見られるの？</p>
+    </div>
+    <div class="hitokoto">
+     <p>ちひろのアトリエや作品展</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/ちひろギャラリー.png">
+    </div>
+    <div class="page-setumei">
+     <p>
+      現在一般公開(いっぱんこうかい)されており、母・文江が暮らした大正時代の部屋を再現しているほか、ちひろの東京の自宅にあったアトリエも再現されています。<br>
+      ギャラリーでは季節ごとにちひろ作品の企画展を開催(かいさい)しています。</p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>お問い合わせ</p>
+    </div>
+    <div class="hitokoto">
+     <p>0778-66-7112</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+      住所　　　≫　越前市天王町4-14 <br>
+      営業時間　≫　10：00～16：00<br>
+      定休日　　≫　火曜日<br>
+      電話　　　≫　0778-66-7112<br>
+      駐車場　　≫　西側駐車場：3台、東側駐車場：7台<br>
+      入館料　　≫　一般 300円／ 高校生以下は無料<br>
+      ※一般団体(10名以上) 200円<br>
+      ※高校生以下の団体(5名以上)の引率者(1名) 無料<br>
+      ※障害者手帳をお持ちの方 150円<br>
+      ※障害者の引率者(1名) 無料
+    </p>
+    </div>
+    <div class="official-site">
+      <a href="http://chihironoie.jp/" class="btn btn--red btn--radius btn--cubic">ちひろの生まれた家　公式サイトはこちら<i class="fas fa-angle-right fa-position-right"></i></a>
+    </div>
+
+
+    </div>
+
+     <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>いわさきちひろさんの絵は小学校の頃、教科書で何度も拝見しました。いわさきちひろさんから見た越前市はどんな感じだったのか気になりますね。ギャラリーは展示されている絵を見るだけでとってもほっこりできる場所なので、ゆっくりしたい時にオススメです。</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
      </div><div class="access">
        <h1>アクセス</h1>
 
-       <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8144.173145465252!2d136.16175023630055!3d35.897598528665156!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd31c7fd3bbbb1f46!2z44Gh44Gy44KN44Gu55Sf44G-44KM44Gf5a62IOiomOW_temkqA!5e0!3m2!1sja!2sjp!4v1599639564618!5m2!1sja!2sjp"  width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+       <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8144.173145465252!2d136.16175023630055!3d35.897598528665156!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd31c7fd3bbbb1f46!2z44Gh44Gy44KN44Gu55Sf44G-44KM44Gf5a62IOiomOW_temkqA!5e0!3m2!1sja!2sjp!4v1599639564618!5m2!1sja!2sjp"  width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      </div>
 
-     </div>
+     
 
      <hr>
 
