--- a/page_ta.html
+++ b/page_ta.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>愛宕山古墳群</title>
+  <title>越前かるた-愛宕山古墳群</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/ta.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +61,92 @@
        <h2>た　：　たくさんの　古墳が近くに　愛宕山古墳群</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>愛宕山のたくさんの古墳を合わせてよんだもの</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/愛宕山.png">
+     </div>
+     <div class="page-setumei">
+      <p>
+        愛宕山(あたごやま)はこれまでに前方後円墳(ぜんぽうこうえんふん)２基を含む78基の古墳が確認され、これを合わせて愛宕山古墳群(あたごやまこふんぐん)といいます。
+        </p>
+     </div>
+
+
+     <div class="balloon2-right">
+      <p>古墳とは？</p>
     </div>
+    <div class="hitokoto">
+     <p>昔の王様のお墓</p>
+    </div>
+    
+    <div class="page-setumei">
+     <p>
+      日本は3世紀後半から約400年間ほど、土を高く盛り上げて丘のようにしたお墓が多くつくられました。このようなお墓を「古墳(こふん)」といいます。<br> 
+      <br> 
+      愛宕山近くの吉野小学校では、実際に愛宕山に登って古墳を見に行ったり、寝っ転がってみたりする授業があるそうで、学校の中には資料室もあります。これほど近くに古墳がある学校は珍しいそうです。</p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>愛宕山の古墳は？</p>
+    </div>
+    <div class="hitokoto">
+     <p>様々な時代の古墳がたくさん！</p>
+    </div>
+    <div class="shasin">
+      <p>東山支群、愛宕山支郡、里山西支郡、里山中央支郡の4市郡で構成されています。縄文時代、古墳時代、中世の遺跡もあるそうです。</p>
+      <img src="pageimages/愛宕山古墳分布図.jpg">
+    </div>
+    <div class="shasin">
+      <p>一番大きい前方後円墳は東山支郡にあります。第20号古墳という看板が立っています。</p>
+      <img src="pageimages/20号古墳.jpg">
+    </div>
+   
+
+    <div class="balloon2-right">
+      <p>登り方は？</p>
+    </div>
+    <div class="hitokoto">
+     <p>丹南総合公園の脇から</p>
+    </div>
+    
+    <div class="page-setumei">
+     <p>愛宕山は丹南総合公園の脇から登れるようになっています(遊具がある公園の脇・柵がしてありますが簡単に開けられます)。<br>
+      近道コース(10分500ｍ)とより道コース(20分750ｍ)がありますが、より道コースだと途中に古墳群があります。</p>
+    </div>
+    <div class="shasin">
+      <p>▼愛宕山マップ</p>
+      <img src="pageimages/愛宕山マップ.jpg">
+    </div>
+    <div class="shasin">
+      <p>頂上からは日野山や越前市内が見渡せます。</p>
+      <img src="pageimages/愛宕山頂上.png">
+    </div>
+
+
+    </div>
+
+     <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>かるたの絵の参考にしようと、吉野小学校に行って資料室を見せていただきました！先生からもいろいろとお話が聞けたのですが、前方後円墳は、王様が寝っ転がって、起き上がったときに領地が見渡せる方向に作られているそうですよ！知っていましたか？</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
 
     <div class="access">
       <h1>アクセス</h1>
