--- a/page_ki.html
+++ b/page_ki.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>菊人形</title>
+  <title>越前かるた-菊人形</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/ki.css">
 </head>
 
 <body>
@@ -59,12 +60,125 @@
 
      <hr>
 
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>越前市民なら誰もが一度は行った菊と遊具の大公園</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/2017菊人形.jpg">
+     </div>
      <div class="page-setumei">
-       <p>武生菊人形は、毎年10月から11月にかけて武生中央公園で行われるイベント。菊の花や葉を人形の衣服にしたもの。武生菊人形は日本三大菊人形に数えられる。
+      <p>
+        本当は「武生中央公園」というのですが、秋になると秋祭りとして菊人形の展示が行われるので、地元の人には「菊人形」と呼ばれています。
         </p>
      </div>
 
+
+     <div class="balloon2-right">
+      <p>菊人形とは？</p>
     </div>
+    <div class="hitokoto">
+     <p>菊で飾られたお人形！</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/菊人形.png">
+    </div>
+    <div class="page-setumei">
+     <p>
+      期間中に会場に展示される、菊の花や葉で飾られたお人形です。<br>
+      大河ドラマの1シーンを再現していたり、最近ではディズニーキャラクターの菊人形が登場しました。<br>
+      たけふ菊人形は日本三大菊人形に数えられています。
+       </p>
+    </div>
+    <br>
+    <div class="shasin">
+      <img src="pageimages/菊.png">
+    </div>
+    <div class="page-setumei">
+      <p>
+       もちろんそのままの菊を楽しむこともできます。<br>
+       期間中の会場は2万株の菊がうつくしく咲きほこります。<br>
+       <br>
+       ちなみに、越前市の花は「菊」なんですよ！知っていましたか？
+        </p>
+     </div>
+
+
+     <div class="balloon2-right">
+      <p>遊具はなにがある？</p>
+    </div>
+    <div class="hitokoto">
+      <p>家族で楽しめるバイキングや観覧車！</p>
+     </div>
+    <div class="page-setumei">
+      <p>
+       公園内には大人も子供も楽しめる遊具がたくさん！<br>
+       遊具に乗るには券がいるので、たくさん買ってから行きましょう！<br><br>
+       ・遊具回数券（遊具券100円券　11枚つづり）1,000円<br>・遊具券（単券）100円
+        </p>
+     </div>
+     <br>
+    <div class="shasin">
+      <P>★バイキング　400円</P>
+      <img src="pageimages/バイキング.png">
+    </div>
+    <div class="shasin">
+      <P>★アストロファイター　400円</P>
+      <img src="pageimages/アストロファイター.png">
+    </div>
+    <div class="shasin">
+      <P>★大観覧車　300円</P>
+      <img src="pageimages/大観覧車.png">
+    </div>
+    <div class="shasin">
+      <P>★モノレール　300円</P>
+      <img src="pageimages/モノレール.png">
+    </div>
+    <div class="shasin">
+      <P>★メリーゴーラウンド　300円</P>
+      <img src="pageimages/メリーゴーラウンド.png">
+    </div>
+    
+
+    <div class="balloon2-right">
+      <p>お問い合わせ</p>
+    </div>
+    <div class="hitokoto">
+     <p>0778-21-0175</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+      会場　　　≫　武生中央公園<br>
+      住所　　　≫　越前市高瀬2丁目 <br>
+      開場期間　≫　10月はじめ～11月はじめ<br>
+      開場時間　≫　9：00～17：00<br>
+      定休日　　≫　期間中無休<br>
+      電話　　　≫　0778-21-0175(たけふ菊人形事務局)<br>
+      入場料　　≫　無料
+       </p>
+    </div>
+
+     
+
+    </div>
+
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>越前市民なら一度は行ったことのある菊人形！菊の着物を着た菊人形たちは圧巻の一言です。見た目もいいですが、香りも菊のいい香りがします。私も何度も遊びに行きました。小学生の頃は「仰天」に乗るのが怖くて怖くて…(バイキングが一回転するような遊具です)。いつか乗ろうと思っていたら無くなってしまいました。</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
 
 
     <div class="access">
