ち　仁愛大学

--- a/page_ti.html
+++ b/page_ti.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>仁愛大学</title>
+  <title>越前かるた-仁愛大学</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/ti.css">
 </head>
 
 <body>
@@ -57,7 +58,58 @@
        <h2>ち　：　地域に貢献！　仁愛大学が　盛り上げます</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>地域と交流が多い越前市にある私立大学</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/仁愛大学.jpg">
+     </div>
+     <div class="page-setumei">
+      <p>
+        2001年に設置された私立大学　通称・仁大(じんだい)！<br>
+        <br>
+        「人間学部」「人間生活学部」という、ちょっと変わった名前の学部がありますが、「人間ってなんだろう？」という人間に対する理解を深めるための大学です。</p>
+     </div>
+
+
+     <div class="balloon2-right">
+      <p>どんな大学？</p>
     </div>
+    <div class="hitokoto">
+     <p>地元の人がたくさん！だから地域とつながりがある</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+      仁愛大学は学生のほとんどが北陸出身で、その中でも福井県からという人がとっても多い大学です。<br>
+      そのため地元が好きな学生が多く、フィールドワークを通して学外で地域の方々と交流しながら学びを深めています。<br>
+      <br>
+      特にコミュニケーション学科のゼミでは、地域貢献活動支援補助金(ちいきこうけんかつどうしえんほじょきん)を活用し、地域の問題解決(もんだいかいけつ)、活性化(かっせいか)を目的とした活動をしています。</p>
+    </div>
+
+    </div>
+
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>我らが仁愛大学、通称「仁大」！この越前かるたも卒業研究として制作していますが、それまでにも武生中央公園でイベントをしたり、福井の中央公園でサマーフェスをしたり、地域の方々と協力して商品開発をしたりと、様々な活動を通して地域の方と交流を深めてきました！仁愛大学は好きなことを思いっきりできる環境が整っているので、入学ご検討の方はぜひ！</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
+
 
     <div class="access">
       <h1>アクセス</h1>
