--- a/page_ti.html
+++ b/page_ti.html
@@ -73,8 +73,11 @@
       <p>
         2001年に設置された私立大学　通称・仁大(じんだい)！<br>
         <br>
-        「人間学部」「人間生活学部」という、ちょっと変わった名前の学部がありますが、「人間ってなんだろう？」という人間に対する理解を深めるための大学です。</p>
+        人間学部・人間生活学部の2つの学部があり、心理学科・コミュニケーション学科・健康栄養(けんこうえいよう)学科・子ども教育学科に分かれています。<br><br>
+        ちょっと変わった名前の学部ですが、「人間ってなんだろう？」という人間に対する理解を深めるための大学です。</p>
      </div>
+
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/hUP_hfcjjvw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
      <div class="balloon2-right">
@@ -90,6 +93,91 @@
       <br>
       特にコミュニケーション学科のゼミでは、地域貢献活動支援補助金(ちいきこうけんかつどうしえんほじょきん)を活用し、地域の問題解決(もんだいかいけつ)、活性化(かっせいか)を目的とした活動をしています。</p>
     </div>
+
+
+    <div class="balloon2-right">
+      <p>学科紹介①</p>
+    </div>
+    <div class="hitokoto">
+     <p>人間学部　心理学科</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/心理.jpg">
+    </div>
+    <div class="page-setumei">
+     <p>「なぜそう思うの？」という、人の心や行動に対する疑問を研究しています。カウンセリングや実験、データ収集、分析を通して実践的に学んでいくことで、社会に出ても活躍できる人を育てています。<br>
+      実験のための機械も最先端(さいせんたん)のものをそろえていて、実験室も完全防音の部屋があるなど、充実(じゅうじつ)しています。<br>
+      <br>
+     イメージカラー：青
+      </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>学科紹介②</p>
+    </div>
+    <div class="hitokoto">
+     <p>人間学部　コミュニケーション学科</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/コミュニケーション.jpg">
+    </div>
+    <div class="page-setumei">
+     <p>人と人とのコミュニケーションを通じて、さまざまな人をつなぎ、自分から考えて課題の解決に取り組むことができる人を育てています。<br>
+     2年生からは「企画・マネジメントコース」「英語コミュニケーションコース」「情報社会コース」という3つのコースに分かれており、気になる分野をより学ぶことができます。<br>
+     <br>
+     イメージカラー：オレンジ
+      </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>学科紹介➂</p>
+    </div>
+    <div class="hitokoto">
+     <p>人間生活学部　健康栄養学科</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/健康.jpg">
+    </div>
+    <div class="page-setumei">
+     <p>新しい食品を開発したり、地域で市民や子どもに対して食育活動を行ったり、栄養・健康面に関わる活躍を期待される管理栄養士(かんりえいようし)を育てています。<br>
+     化学や生物を1から学ぶことができ、3・4年生になると実際の医療現場(いりょうげんば)や給食施設に研修に行ったり、食のイベントを企画・運営したりと、実践的(じっせんてき)な活動をします。<br>
+     <br>
+    イメージカラー：緑</p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>学科紹介④</p>
+    </div>
+    <div class="hitokoto">
+     <p>人間生活学部　子ども教育学科</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/子ども教育.jpg">
+    </div>
+    <div class="page-setumei">
+     <p>0歳から小学生まで、とことん子どもに向き合う小学校の先生、幼稚園の先生、保育士、児童厚生員(じどうこうせいいん)などをそだてています。<br>
+     先生や保育士の資格を取ることができる授業があり、幅広い考えや行動力、指導力(しどうりょく)をつけることができます。<br>
+     <br>
+    イメージカラー：ピンク</p>
+    </div>
+
+
+    
+    <div class="balloon2-right">
+      <p>お問い合わせ</p>
+    </div>
+    <div class="hitokoto">
+     <p>0778-27-2010</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+      住所　　　≫　越前市大手町3-1-1 <br>
+      電話　　　≫　0778-27-2010<br>
+    </div>
+
 
     </div>
 
