--- a/page_no.html
+++ b/page_no.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>のろっさ</title>
+  <title>越前かるた-のろっさ</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/no.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +61,94 @@
        <h2>の　：　のろっさ！　越前走って　どこまでも</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>誰でも乗れる越前の市民バス</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/のろっさ.png">
+     </div>
+
+     <div class="page-setumei">
+      <p>緑の車体がかわいい市民バス「のろっさ」<br>
+        越前市では、交通の不便な地域に住む人に対して、のろっさを運行し、通院・買物などの日常生活を助けることを目的としています。</p>
+     </div>
+
+
+     <div class="balloon2-right">
+      <p>のろっさとは？</p>
     </div>
+    <div class="hitokoto">
+     <p>福井の方言・意味は「乗ろうよ」</p>
+    </div>
+    <div class="page-setumei">
+     <p>福井弁では「○○しようよ」を「○○しよっさ」といいます。<br><br>
+    「乗ろうよ」→「乗ろっさ」→「のろっさ」<br><br>
+    ということです！
+     </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>どこを走ってるの？</p>
+    </div>
+    <div class="hitokoto">
+     <p>越前市内いろんなところを走っています！</p>
+    </div>
+    <div class="page-setumei">
+     <p>・市街地循環北ルート(月～土)<br>
+      ・市街地循環南ルート(月～土)<br>
+      ・吉野・大虫ルート(月・木)<br>
+      ・坂口・神山ルート(火・土)<br>
+      ・王子保・南ルート(月・木)<br>
+      ・国高・北日野ルート(水・金)<br>
+      ・味真野・北新庄ルート(水・金)<br>
+      ・白山・大虫ルート(火・土)<br>
+      ・月尾ルート(月～金)<br>
+      ・水間ルート(月～金)<br>
+      ・服間ルート(月～金)<br>
+     </p>
+    </div>
+    <div class="official-site">
+      <a href="https://www.city.echizen.lg.jp/office/030/015/shiminbasujikokuhyou.html" class="btn btn--red btn--radius btn--cubic">ルート・時刻表はこちら<i class="fas fa-angle-right fa-position-right"></i></a>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>どうやって乗るの？</p>
+    </div>
+    <div class="hitokoto">
+     <p>1回100円で乗れます！</p>
+    </div>
+    <div class="page-setumei">
+     <p>料金　≫　1回　100円(小学生以下は無料)<br>
+       　　　　　1日乗り放題　200円(車内販売)<br>
+       <br>
+       回数乗車券も1枚100円の券11枚・1000円で売っています(車内販売)
+     </p>
+    </div>
+
+
+    </div>
+
+     <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>私も何度か利用したことがありますが、遠くから見ても緑の車体はすぐにわかりますね！絵札のバスの下に描かれている模様は越前市の形をしています(わかりづらいかな…？)</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
 
     <hr>
 
