--- a/page_ti.html
+++ b/page_ti.html
@@ -12,6 +12,9 @@
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
